@@ -23,9 +23,9 @@ import org.apache.kafka.common.security.auth.SecurityProtocol;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
@@ -47,9 +47,9 @@ public final class EndpointReadyFuturesTest {
     private static final KafkaAuthorizerServerInfo INFO = new KafkaAuthorizerServerInfo(
         new ClusterResource("S6-01LPiQOCBhhFIunQUcQ"),
         1,
-        Arrays.asList(EXTERNAL, INTERNAL),
+        List.of(EXTERNAL, INTERNAL),
         INTERNAL,
-        Arrays.asList("INTERNAL"));
+        List.of("INTERNAL"));
 
     static void assertComplete(
             EndpointReadyFutures readyFutures,
@@ -98,7 +98,7 @@ public final class EndpointReadyFuturesTest {
     public void testImmediateCompletion() {
         EndpointReadyFutures readyFutures = new EndpointReadyFutures.Builder().
                 build(Optional.empty(), INFO);
-        assertEquals(new HashSet<>(Arrays.asList(EXTERNAL, INTERNAL)),
+        assertEquals(new HashSet<>(List.of(EXTERNAL, INTERNAL)),
                 readyFutures.futures().keySet());
         assertComplete(readyFutures, EXTERNAL, INTERNAL);
     }
@@ -109,7 +109,7 @@ public final class EndpointReadyFuturesTest {
         EndpointReadyFutures readyFutures = new EndpointReadyFutures.Builder().
                 addReadinessFuture("foo", foo).
                 build(Optional.empty(), INFO);
-        assertEquals(new HashSet<>(Arrays.asList(EXTERNAL, INTERNAL)),
+        assertEquals(new HashSet<>(List.of(EXTERNAL, INTERNAL)),
                 readyFutures.futures().keySet());
         assertIncomplete(readyFutures, EXTERNAL, INTERNAL);
         foo.complete(null);
@@ -124,7 +124,7 @@ public final class EndpointReadyFuturesTest {
                 addReadinessFuture("foo", foo).
                 addReadinessFuture("bar", bar).
                 build(Optional.empty(), INFO);
-        assertEquals(new HashSet<>(Arrays.asList(EXTERNAL, INTERNAL)),
+        assertEquals(new HashSet<>(List.of(EXTERNAL, INTERNAL)),
                 readyFutures.futures().keySet());
         assertIncomplete(readyFutures, EXTERNAL, INTERNAL);
         foo.complete(null);
@@ -141,7 +141,7 @@ public final class EndpointReadyFuturesTest {
         EndpointReadyFutures readyFutures = new EndpointReadyFutures.Builder().
                 addReadinessFutures("baz", bazFutures).
                 build(Optional.empty(), INFO);
-        assertEquals(new HashSet<>(Arrays.asList(EXTERNAL, INTERNAL)),
+        assertEquals(new HashSet<>(List.of(EXTERNAL, INTERNAL)),
                 readyFutures.futures().keySet());
         assertIncomplete(readyFutures, EXTERNAL, INTERNAL);
         bazFutures.get(EXTERNAL).complete(null);
@@ -159,7 +159,7 @@ public final class EndpointReadyFuturesTest {
                 addReadinessFuture("foo", foo).
                 addReadinessFuture("bar", bar).
                 build(Optional.empty(), INFO);
-        assertEquals(new HashSet<>(Arrays.asList(EXTERNAL, INTERNAL)),
+        assertEquals(new HashSet<>(List.of(EXTERNAL, INTERNAL)),
                 readyFutures.futures().keySet());
         assertIncomplete(readyFutures, EXTERNAL, INTERNAL);
         foo.complete(null);
